creusot/tests/should_fail/prusti/deref/match.stderr
error[creusot]: invalid shr dereference of expression with home `'old` and lifetime `'old` at time-slice `'curr`
  --> match.rs:14:37
   |
14 | #[ensures({let x = old(x.mk_ref()); match x {None => true, Some(_) => true}})]
   |                                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

